修改etcd支持
